Fixes on mobile

--- a/custom.css
+++ b/custom.css
@@ -137,7 +137,7 @@ border-bottom: none;
   border-left-color: transparent;
   border-right-color: transparent;
   border-bottom-color: #fff;
-  transition: all .5s;
+  transition: transform .5s;
 }
 #searchInput::placeholder {
   color: #fff;
@@ -161,10 +161,7 @@ border-bottom: none;
         #searchInput:read-write:focus {
             transform: translateY(39px);
             border: 0;
-            border-radius: 0;
             margin: 0;
-            left: 0;
-            right: 0;
             width: 100%;
             width: -moz-available;          /* WebKit-based browsers will ignore this. */
             width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
@@ -1978,7 +1975,7 @@ body.dashMobile table.mobileitem td.name img{
     }
 	
     .bannercontent {
-    padding-top:0 !important;
+    padding-top:10px !important;
     }
     .container-fluid{padding: 0 !important;margin: 0 !important;}
 }   
